--- a/src/App.css
+++ b/src/App.css
@@ -1,91 +1,10 @@
-* {
-    box-sizing: border-box;
-    background-color: rgb(244, 244, 244);
-    color: #333;
-    font-size: 10px;
-  }
-  
-  .App {
-    margin: 0;
-    padding: 0;
-  }
+.Input {
+    width: var(--width);
+    padding-left: 24px !important;
+}
 
-  .container {
-    margin: 0 auto;
-    max-width: 1000px;
-    padding: 40px;
-  }
-
-  .title {
-    font-size: 4.4rem;
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  }
-
-  .form {
-    display: grid;
-  }
-
-  .label {
-    font-size: 3rem;
-    margin-bottom: 1rem;
-  }
-  
-  .input {
-    font-size: 1.6rem;
-    padding: 0.5rem 2rem;
-    line-height: 2.8rem;
-    border-radius: 5px;
-    background-color: rgb(204, 196, 196);
-    margin-bottom: 10rem;
-    text-align: center;
-  }
-
-  .button {
-    background-color: rgba(0, 0, 0, 0.75);
-    color: white;
-    padding: 1rem 2rem;
-    border: 1px solid rgba(0, 0, 0, 0.75);
-    border-radius: 20px;
-    font-size: 1.4rem;
-    cursor: pointer;
-    transition: background-color 250ms;
-  }
-
-  .button:hover {
-    background-color: rgba(0, 0, 0, 0.85);
-  }
-
-  .card-list {
-    column-count: 3;
-    margin-top: 5vh;
-  }
-  
-  .card {
-      margin-bottom: 1rem;
-      display: flex;
-      width: 100%;
-      height: 50%;
-  }
-  
-  .card--image {
-      flex: 100%;
-      margin-top: 1rem;
-      border-radius: 10px;
-  }
-
-  @media (min-width: 768px) {
-    .form {
-      grid-template-columns: auto 1fr auto;
-      grid-gap: 1rem;
-      align-items: center;
-    }
-    .input {
-      margin-bottom: 0;
-    }
-  }
-  
-  @media only screen and (max-width: 600px) {
-      .card-list {
-          column-count: 1;
-      }
-  }
+.cardImage {
+    width: 20vw;
+    height: 20vh;
+    border-radius: 10px;
+}
